--- a/package.json
+++ b/package.json
@@ -1,29 +1,27 @@
 {
-	"name": "gulpfile_generator",
-	"version": "1.1.0",
-	"description": "This is a genarator for gulpfile and package.json",
-	"author": "steelydylan",
-	"url": "http://horicdesign.com",
-	"license": "MIT License",
-	"keywords": "gulp",
-	"devDependencies":{
-		"gulp": "*",
-		"gulp-plumber": "*",
-		"gulp-rename": "*",
-		"gulp-sourcemaps": "*",
-		"gulp-sass": "*",
-		"gulp-autoprefixer": "*",
-		"es6-promise": "*",
-		"gulp-csscomb": "*",
-		"gulp-merge-media-queries": "*",
-		"gulp-csslint": "*",
-		"gulp-minify-css": "*",
-		"gulp-uglify": "*",
-		"gulp-jshint": "*",
-		"gulp-jade": "*",
-		"gulp-imagemin": "*",
-		"gulp-cache": "*",
-		"browser-sync": "*",
-		"gulp-notify": "*"
-	}
+  "name": "basegulpconfiguration",
+  "version": "0.0.1",
+  "description": "Base gulpfile",
+  "author": "jwoos",
+  "url": "http://github.com/jwoos",
+  "license": "MIT License",
+  "keywords": "gulp",
+  "devDependencies": {
+    "browser-sync": "^2.11.1",
+    "del": "^2.2.0",
+    "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^3.1.0",
+    "gulp-clean-css": "^2.0.2",
+    "gulp-csslint": "^0.2.0",
+    "gulp-imagemin": "^2.4.0",
+    "gulp-jade": "^1.1.0",
+    "gulp-jshint": "^2.0.0",
+    "gulp-plumber": "^1.1.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-sass": "^2.2.0",
+    "gulp-sourcemaps": "^1.6.0",
+    "jade": "^1.11.0",
+    "jshint-stylish": "^2.1.0",
+    "wiredep": "^3.0.0"
+  }
 }
