--- a/bower.json
+++ b/bower.json
@@ -1,22 +1,35 @@
 {
-  "name": "pocketistics",
-  "description": "Pocket stats",
-  "main": "index.html",
-  "authors": [
-    "jwoos"
-  ],
-  "license": "MIT License",
-  "keywords": [
-    "gulp"
-  ],
-  "homepage": "https://github.com/jwoos/web_pocketistic",
-  "moduleType": [],
-  "private": true,
-  "ignore": [
-    "**/.*",
-    "node_modules",
-    "bower_components",
-    "test",
-    "tests"
-  ]
+	"name": "pocketistics",
+	"description": "Pocket stats",
+	"main": "index.html",
+	"authors": [
+		"jwoos"
+	],
+	"license": "MIT License",
+	"keywords": [
+		"gulp"
+	],
+	"homepage": "https://github.com/jwoos/web_pocketistic",
+	"moduleType": [],
+	"private": true,
+	"ignore": [
+		"**/.*",
+		"node_modules",
+		"bower_components",
+		"test",
+		"tests"
+	],
+	"dependencies": {
+		"jquery": "^2.2.1",
+		"bootstrap": "^3.3.6"
+	},
+	"overrides": {
+		"bootstrap": {
+			"main": [
+				"dist/js/bootstrap.js",
+				"dist/css/bootstrap.css",
+				"less/bootstrap.less"
+			]
+		}
+	}
 }
