--- a/package.json
+++ b/package.json
@@ -1,27 +1,17 @@
 {
-  "name": "basegulpconfiguration",
-  "version": "0.0.1",
-  "description": "Base gulpfile",
-  "author": "jwoos",
-  "url": "http://github.com/jwoos",
-  "license": "MIT License",
-  "keywords": "gulp",
-  "devDependencies": {
-    "browser-sync": "^2.11.1",
-    "del": "^2.2.0",
-    "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^3.1.0",
-    "gulp-clean-css": "^2.0.2",
-    "gulp-csslint": "^0.2.0",
-    "gulp-imagemin": "^2.4.0",
-    "gulp-jade": "^1.1.0",
-    "gulp-jshint": "^2.0.0",
-    "gulp-plumber": "^1.1.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-sass": "^2.2.0",
-    "gulp-sourcemaps": "^1.6.0",
-    "jade": "^1.11.0",
-    "jshint-stylish": "^2.1.0",
-    "wiredep": "^3.0.0"
+  "name": "pocketistic",
+  "version": "0.0.0",
+  "private": true,
+  "scripts": {
+    "start": "node ./bin/www"
+  },
+  "dependencies": {
+    "body-parser": "~1.13.2",
+    "cookie-parser": "~1.3.5",
+    "debug": "~2.2.0",
+    "express": "~4.13.1",
+    "jade": "~1.11.0",
+    "morgan": "~1.6.1",
+    "serve-favicon": "~2.3.0"
   }
 }
