--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "async": "^2.0.0-rc.6",
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
@@ -14,6 +15,7 @@
     "morgan": "~1.6.1",
     "node-sass-middleware": "^0.9.8",
     "pg": "^4.5.5",
+    "request": "^2.72.0",
     "serve-favicon": "~2.3.0"
   }
 }
