--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
   "dependencies": {
     "async": "^2.0.0-rc.6",
     "body-parser": "~1.13.2",
+    "connect-pg-simple": "^3.1.0",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
+    "express-session": "^1.13.0",
     "jade": "~1.11.0",
     "morgan": "~1.6.1",
     "node-sass-middleware": "^0.9.8",
-    "pg": "^4.5.5",
+    "node-uuid": "^1.4.7",
+    "pg": "^4.5.6",
     "request": "^2.72.0",
     "serve-favicon": "~2.3.0"
   }
