--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "pg-hstore": "^2.3.2",
     "request": "^2.72.0",
     "sequelize": "^3.23.4",
+    "sequelize-cli": "^2.4.0",
     "serve-favicon": "~2.3.0",
     "umzug": "^1.11.0"
   }
