--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "async": "^2.0.0-rc.6",
     "body-parser": "~1.13.2",
     "connect-pg-simple": "^3.1.0",
+    "connect-session-sequelize": "^3.1.0",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
