--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,6 @@
     "connect-pg-simple": "^3.1.0",
     "connect-session-sequelize": "^3.1.0",
     "cookie-parser": "~1.3.5",
-    "debug": "~2.2.0",
     "express": "~4.13.1",
     "express-session": "^1.13.0",
     "jade": "~1.11.0",
@@ -25,5 +24,8 @@
     "sequelize-cli": "^2.4.0",
     "serve-favicon": "~2.3.0",
     "umzug": "^1.11.0"
-  }
+  },
+	"devDependencies": {
+    "debug": "~2.2.0"
+	}
 }
