--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "devDependencies": {
     "debug": "~2.2.0",
-    "eslint": "^3.2.2"
+    "eslint": "^3.2.2",
+    "jasmine": "^2.4.1"
   }
 }
