--- a/package.json
+++ b/package.json
@@ -8,9 +8,8 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "async": "^2.0.0-rc.6",
     "body-parser": "~1.13.2",
-    "connect-session-sequelize": "3.0.0",
+    "connect-pg-simple": "^3.1.0",
     "cookie-parser": "~1.3.5",
     "express": "~4.13.1",
     "express-session": "^1.13.0",
@@ -18,7 +17,6 @@
     "node-sass-middleware": "^0.9.8",
     "node-uuid": "^1.4.7",
     "pg": "^4.5.6",
-    "pg-hstore": "^2.3.2",
     "pug": "^2.0.0-beta4",
     "request": "^2.72.0",
     "sequelize": "^3.23.4",
