--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "bluebird": "^3.4.6",
     "body-parser": "~1.13.2",
     "connect-pg-simple": "^3.1.0",
     "cookie-parser": "~1.3.5",
