--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "bluebird": "^3.4.6",
+    "blueimp-md5": "^2.4.0",
     "body-parser": "~1.13.2",
     "connect-pg-simple": "^3.1.0",
     "cookie-parser": "~1.3.5",
