--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "~4.13.1",
     "express-session": "^1.13.0",
     "morgan": "~1.6.1",
+    "node-sass": "^4.1.1",
     "node-sass-middleware": "^0.9.8",
     "node-uuid": "^1.4.7",
     "pg": "^4.5.6",
