--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
-  web:
-    image: 'jwoos/pocketistic-backend:latest'
+  server:
+    image: 'jwoos/pocketistic-server:latest'
     ports:
       - '8080:8080'
     volumes:
@@ -9,7 +9,7 @@ services:
     depends_on:
       - 'db'
   db:
-    image: 'postgres:9.6'
+    image: 'jwoos/pocketistic-db:latest'
     environment:
       - POSTGRES_DB=pocketistic
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD:-1234567890}
+      - POSTGRES_PASSWORD=1234567890
