--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
-  server:
-    image: 'jwoos/pocketistic-server:latest'
+  web:
+    image: 'jwoos/pocketistic-web:latest'
     ports:
       - '8080:8080'
     volumes:
