--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,18 @@
 *.swo
 *.swp
+
 node_modules
 bower_components
 .tmp/
 dist/
-npm-debug.log
+build/
+
 .sass-cache/
-style.css
-style.css.map
+
+
+.DS_Store
+.env
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
