--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,14 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.16.1",
     "bootstrap": "^3.3.7",
+    "chartjs": "^0.3.24",
     "immutable": "^3.8.1",
+    "rcolor": "^1.0.1",
     "react": "^15.5.4",
     "react-bootstrap": "^0.31.0",
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.4",
+    "react-router": "^4.1.1",
     "redux-immutable": "^4.0.0",
-    "redux-logger": "^3.0.1"
+    "redux-logger": "^3.0.1",
+    "sweetalert": "^1.1.3",
+    "trianglify": "^1.0.1"
   },
   "devDependencies": {
     "autoprefixer": "6.7.2",
