updated package and general scaffolding

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,13 +6,18 @@
     "axios": "^0.16.1",
     "bootstrap": "^3.3.7",
     "chartjs": "^0.3.24",
+    "history": "^4.6.1",
     "immutable": "^3.8.1",
+    "node-sass": "^4.5.2",
     "rcolor": "^1.0.1",
     "react": "^15.5.4",
     "react-bootstrap": "^0.31.0",
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.4",
     "react-router": "^4.1.1",
+    "react-router-dom": "^4.1.1",
+    "redux": "^3.6.0",
+    "redux-create-reducer": "^1.1.1",
     "redux-immutable": "^4.0.0",
     "redux-logger": "^3.0.1",
     "sweetalert": "^1.1.3",
