--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "axios": "^0.16.1",
     "bluebird": "3.5.x",
     "blueimp-md5": "2.7.x",
     "body-parser": "1.17.x",
+    "bootstrap": "^3.3.7",
+    "chart.js": "^2.5.0",
     "connect-pg-simple": "^3.1.0",
     "cookie-parser": "1.4.x",
     "express": "4.15.x",
@@ -19,10 +22,13 @@
     "node-uuid": "1.4.x",
     "pg": "6.1.x",
     "pug": "2.0.0-rc.1",
+    "rcolor": "^1.0.1",
     "request": "2.81.x",
     "sequelize": "3.30.x",
     "sequelize-cli": "2.7.x",
     "serve-favicon": "2.4.x",
+    "sweetalert": "^1.1.3",
+    "trianglify": "^1.0.1",
     "umzug": "2.0.x"
   },
   "devDependencies": {
