--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
     "body-parser": "1.17.x",
     "bootstrap": "^3.3.7",
     "chart.js": "^2.5.0",
-    "connect-pg-simple": "^3.1.0",
+    "connect-pg-simple": "4.0.x",
     "cookie-parser": "1.4.x",
     "express": "4.15.x",
     "express-session": "1.15.x",
     "morgan": "1.8.x",
-    "node-uuid": "1.4.x",
-    "pg": "6.1.x",
+    "node-sass": "^4.5.3",
+    "node-sass-middleware": "^0.11.0",
+    "pg": "6.2.x",
     "pug": "2.0.0-rc.1",
     "rcolor": "^1.0.1",
     "request": "2.81.x",
@@ -29,7 +30,8 @@
     "serve-favicon": "2.4.x",
     "sweetalert": "^1.1.3",
     "trianglify": "^1.0.1",
-    "umzug": "2.0.x"
+    "umzug": "2.0.x",
+    "uuid": "^3.0.1"
   },
   "devDependencies": {
     "debug": "~2.6.0",
