--- a/package.json
+++ b/package.json
@@ -9,8 +9,6 @@
   },
   "dependencies": {
     "axios": "^0.16.1",
-    "bluebird": "3.5.x",
-    "blueimp-md5": "2.7.x",
     "body-parser": "1.17.x",
     "bootstrap": "^3.3.7",
     "chart.js": "^2.5.0",
@@ -18,6 +16,7 @@
     "cookie-parser": "1.4.x",
     "express": "4.15.x",
     "express-session": "1.15.x",
+    "hasha": "^3.0.0",
     "morgan": "1.8.x",
     "node-sass": "^4.5.3",
     "node-sass-middleware": "^0.11.0",
